Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

 o #16264 SocketUrl: changed the Exception to be a communication for cases where the host is temporarly 
          unavailable. If you have a positive SessionId it will go in polling (as opposed to before where 
          it went to dead)

 o #16283 Replication:
          Added property 'dbWriter.quoteColumnNames=false', set to true for DB2 host sinks (e.g. "COMMENT")

 o #16280 Replication:
          Bugfix in SqlRow.java to prevent double base64 encoded client properties for renamed columns
 
 o #16273 Added events for queue thresholds (subject- callback and history queues)

 o #16263 Contrib: changed I_Info.putObject implementations when passing null they now
          remove the entry as specified in javadoc

 o #16256 Replication:
           writer now uses and passes a cloned row (SqlInfo does not change). 
           Invocation of I_PrePostStatement even for CREATE, ALTER and DROP.
           Added Attributes for descriptions created by metadata.

 o #16243 Replication:
          Added configurable XSL transformation on DbWriter side, e.g. 'dbWriter.xslTransformerName=mydbtrans.xsl'
          Added readOnly flag when using SpecificReadonly
 
 o #16241 Replication: Added Oracle -> DB2 replication support

 o #16235 Replication: fixed msg counting when sending multiple transactions in one message
 
 o #16233 added reconfiguration of topic properties possible by re-sending an administrative
          message

 o #16231 embedded XmlBlaster: fix when specifying an alternative properties file

 o #16230 Parsing of xmlBlasterPlugins.xml has been modified to allow re-use of same attribute
          parser

 o #16222 Replication: Added readonly variant on source database with classical DbWatcher approach
          Added configurable 'dbinfo.url' to force another database for DBINFO table
