@@ -1,6 +1,9 @@
 Release notes for xmlBlaster (http://www.xmlBlaster.org)
 The "#99999" numbers are Subversion revision numbers.
 
+ o #16292 ClientProperties of ConnectQos can now be copied to remoteProperties, see
+          See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/interface.connect.html#remoteProperty
+
  o #16264 SocketUrl: changed the Exception to be a communication for cases where the host is temporarly 
           unavailable. If you have a positive SessionId it will go in polling (as opposed to before where 
           it went to dead)
@@ -20,6 +23,8 @@ The "#99999" numbers are Subversion revision numbers.
            writer now uses and passes a cloned row (SqlInfo does not change). 
            Invocation of I_PrePostStatement even for CREATE, ALTER and DROP.
            Added Attributes for descriptions created by metadata.
+
+ o #16249 C client library, WINDOWS only: Bugfix: Added WSASetLastError(0)
 
  o #16243 Replication:
           Added configurable XSL transformation on DbWriter side, e.g. 'dbWriter.xslTransformerName=mydbtrans.xsl'
